--- a/pages/storepush.html
+++ b/pages/storepush.html
@@ -74,9 +74,9 @@
   				var Rbankpics = ""
   				for (var i=0;i<mui("#idCode img").length;i++) {
   					if(i == mui("#idCode img").length){
-  						Rbankpics = Rbankpics+getBase64Image(mui("#idCode img")[i])
+  						Ridpics = Ridpics+getBase64Image(mui("#idCode img")[i])
   					}else{
-  						Rbankpics = Rbankpics+getBase64Image(mui("#idCode img")[i])+","
+  						Ridpics = Ridpics+getBase64Image(mui("#idCode img")[i])+","
   					}
   				}
   				for (var i=0;i<mui("#bankCode img").length;i++) {
